@@ -1,7 +1,8 @@
 version 0.99.5-rc0 - XX-XXX-2010
 . [NEW] Director: Added "hook" for notifications or any other kind of object like CCNotifications
+. [FIX] Node: converToNodeSpace works on RetinaDisplay (issue #1000)
+. [FIX] Tests: Touch Tests works on RetinaDisplay (issue #1000)
 . [3RD] Chipmunk: Using version 5.3.2
-
 
 version 0.99.5-beta3 23-Sep-2010
  . [NEW] RetinaDisplay supported automatically:
